--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.emallstudio.appmetrica_sdk">
+  package="appmetrica_sdk">
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
